exports[`no-todo-test > invalid(1): import test from \"node:test\";\ntest.todo(\"title\"); 1`] = `

  1 | import test from "node:test";
  2 | test.todo("title");

`;

exports[`no-todo-test > invalid(1): import test from \"node:test\";\ntest.todo(\"title\"); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test.todo("title");
    |      ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import test from "node:test";
  2 | test("title");

`;

exports[`no-todo-test > invalid(2): import {it} from \"node:test\";\nit.todo(\"title\"); 1`] = `

  1 | import {it} from "node:test";
  2 | it.todo("title");

`;

exports[`no-todo-test > invalid(2): import {it} from \"node:test\";\nit.todo(\"title\"); 2`] = `

Message:
  1 | import {it} from "node:test";
> 2 | it.todo("title");
    |    ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import {it} from "node:test";
  2 | it("title");

`;

exports[`no-todo-test > invalid(3): import {describe} from \"node:test\";\ndescribe.todo(\"title\", () => {}); 1`] = `

  1 | import {describe} from "node:test";
  2 | describe.todo("title", () => {});

`;

exports[`no-todo-test > invalid(3): import {describe} from \"node:test\";\ndescribe.todo(\"title\", () => {}); 2`] = `

Message:
  1 | import {describe} from "node:test";
> 2 | describe.todo("title", () => {});
    |          ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import {describe} from "node:test";
  2 | describe("title", () => {});

`;

exports[`no-todo-test > invalid(4): import test from \"node:test\";\ntest(\"title\", {todo: true}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {todo: true}, () => {});

`;

exports[`no-todo-test > invalid(4): import test from \"node:test\";\ntest(\"title\", {todo: true}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {todo: true}, () => {});
    |                ^^^^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(5): import test from \"node:test\";\ntest(\"title\", {todo: \"later\"}, () => {}); 1`] = `

  1 | import test from "node:test";
  2 | test("title", {todo: "later"}, () => {});

`;

exports[`no-todo-test > invalid(5): import test from \"node:test\";\ntest(\"title\", {todo: \"later\"}, () => {}); 2`] = `

Message:
  1 | import test from "node:test";
> 2 | test("title", {todo: "later"}, () => {});
    |                ^^^^^^^^^^^^^ Do not commit \`.todo\` tests.

`;

exports[`no-todo-test > invalid(6): import * as nodeTest from \"node:test\";\nnodeTest.test.todo(\"title\", () => {}); 1`] = `

  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test.todo("title", () => {});

`;

exports[`no-todo-test > invalid(6): import * as nodeTest from \"node:test\";\nnodeTest.test.todo(\"title\", () => {}); 2`] = `

Message:
  1 | import * as nodeTest from "node:test";
> 2 | nodeTest.test.todo("title", () => {});
    |               ^^^^ Do not commit \`.todo\` tests.

Suggestion 1/1: Remove \`.todo\`.:
  1 | import * as nodeTest from "node:test";
  2 | nodeTest.test("title", () => {});

`;
